--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,12 @@ language: zh-Hans
 sitemap:
 path: sitemap.xml
 
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
+
 # permalink: :title/
 permalink: archives/:abbrlink.html
 abbrlink:
